yaml/sa-demo/ingress/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: >-
      {"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port":
      "443", "StatusCode": "HTTP_301"}}
    alb.ingress.kubernetes.io/certificate-arn: >-
      arn:aws:acm:us-east-1:093126182733:certificate/80025d7e-3664-4dd0-93bb-013ba9170653
    alb.ingress.kubernetes.io/group.name: internal-ingress
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/healthcheck-port: '80'
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '10'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/security-groups: sg-00be7bf3d369e8ffe, sg-06c5eb59cff839319
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    kubernetes.io/ingress.class: alb
  name: temporal-codec
  namespace: temporal-sandbox
spec:
  rules:
    - host: temporal-codec.hub.live
      http:
        paths:
          - backend:
              service:
                name: temporal-codec
                port:
                  number: 8081
            path: /
            pathType: Prefix
